--- a/index.html
+++ b/index.html
@@ -12,10 +12,14 @@
     });
 </script>
 <body>
-
 <div class="invitation">
-    <!-- Your content here -->
-    <a href="invitation.html">Open Invitation</a>
+    <h1>Welcome to Our Special Event!</h1>
+    <p>You are cordially invited to join us for an evening of celebration and joy.</p>
+    <img src="invitation.png" alt="Invitation Image">
+    <p>Date: [Date]</p>
+    <p>Time: [Time]</p>
+    <p>Location: [Location]</p>
+    <a href="invitation-details.html">Click here for more details</a>
 </div>
 
 </body>
