--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <div class="invitation">
     <h1>Welcome to Our Special Event!</h1>
     <p>You are cordially invited to join us for an evening of celebration and joy.</p>
-    <img src="invitation.png" alt="Invitation Image">
+    <img src="Invitation.png" alt="Invitation Image">
     <p>Date: [Date]</p>
     <p>Time: [Time]</p>
     <p>Location: [Location]</p>
