--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Invitation</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
 <script>
     document.querySelector('.flip-card').addEventListener('click', function() {
@@ -19,6 +19,19 @@
     <p>Time: [Time]</p>
     <p>Location: [Location]</p>
     <a href="invitation-details.html">Click here for more details</a>
+</div>
+
+<div class="flip-card">
+    <div class="flip-card-inner">
+        <div class="flip-card-front">
+            <!-- Front content, e.g., an image of an envelope -->
+            <img src="Invitation.png" alt="Front Image">
+        </div>
+        <div class="flip-card-back">
+            <!-- Back content, e.g., an image of an invitation -->
+            <img src="Details Card.png" alt="Back Image">
+        </div>
+    </div>
 </div>
 
 </body>
