--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
     <title>Invitation</title>
     <link rel="stylesheet" href="styles.css">
 </head>
-<script>
-    document.querySelector('.flip-card').addEventListener('click', function() {
-        this.classList.toggle('flipped');
-    });
-</script>
 <body>
 <div class="invitation">
     <h1>Welcome to Our Special Event!</h1>
@@ -34,5 +29,12 @@
     </div>
 </div>
 
+<script>
+    document.addEventListener('DOMContentLoaded', function() {
+        document.querySelector('.flip-card').addEventListener('click', function() {
+            this.classList.toggle('flipped');
+        });
+    });
+</script>
 </body>
 </html>
