--- a/index.html
+++ b/index.html
@@ -9,16 +9,16 @@
 <body>
 
 <div class="landing-page">
-    <img src="envelopefront.png" alt="Envelope Front" class="envelope" id="envelope">
+    <img src="Envelope Front (Ver.1).png" alt="Envelope Front" class="envelope" id="envelope">
 </div>
 
 <div class="invitation hidden" id="invitation">
-    <img src="invitation.png" alt="Invitation">
+    <img src="Invitation.png" alt="Invitation">
     <p>Click here for more details</p>
 </div>
 
 <div class="details hidden" id="details">
-    <img src="details.png" alt="Details">
+    <img src="Details Card.png" alt="Details">
 </div>
 
 <script>
@@ -44,44 +44,6 @@
     });
 </script>
 
-</body>
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invitation</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-<div class="invitation">
-    <h1>Welcome to Our Special Event!</h1>
-    <p>You are cordially invited to join us for an evening of celebration and joy.</p>
-    <p>Date: [Date]</p>
-    <p>Time: [Time]</p>
-    <p>Location: [Location]</p>
-    <a href="invitation-details.html">Click here for more details</a>
-</div>
-
-<div class="flip-card">
-    <div class="flip-card-inner">
-        <div class="flip-card-front">
-            <!-- Front content, e.g., an image of an envelope -->
-            <img src="Invitation.png" alt="Front Image">
-        </div>
-        <div class="flip-card-back">
-            <!-- Back content, e.g., an image of an invitation -->
-            <img src="Details Card.png" alt="Back Image">
-        </div>
-    </div>
-</div>
-
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        document.querySelector('.flip-card').addEventListener('click', function() {
-            this.classList.toggle('flipped');
-        });
     });
 </script>
 </body>
