--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
 <div class="landing-page">
-    <img src="Envelope Front (Ver.1).png" alt="Envelope Front" class="envelope" id="envelope">
+    <img src="EnvelopeFront.png" alt="Envelope Front" class="envelope" id="envelope">
 </div>
 
 <div class="invitation hidden" id="invitation">
