--- a/index.html
+++ b/index.html
@@ -3,46 +3,34 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invitation</title>
+    <title>Animated Invitation</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
 
 <div class="landing-page">
-    <img src="EnvelopeFront.png" alt="Envelope Front" class="envelope" id="envelope">
+    <div class="envelope" id="envelope"></div>
 </div>
 
 <div class="invitation hidden" id="invitation">
-    <img src="Invitation.png" alt="Invitation">
-    <p>Click here for more details</p>
+    <div class="invitation-content">
+        <h2>Welcome to Our Special Event!</h2>
+        <p>You are cordially invited to join us for an evening of celebration and joy.</p>
+        <p>Date: [Date]</p>
+        <p>Time: [Time]</p>
+        <p>Location: [Location]</p>
+        <a href="#" id="details-link">Click here for more details</a>
+    </div>
 </div>
 
 <div class="details hidden" id="details">
-    <img src="Details Card.png" alt="Details">
+    <div class="details-content">
+        <h2>Event Details</h2>
+        <p>This is where the details of the event will be displayed.</p>
+    </div>
 </div>
 
-<script>
-    document.addEventListener('DOMContentLoaded', function() {
-        var envelope = document.getElementById('envelope');
-        var invitation = document.getElementById('invitation');
-        var details = document.getElementById('details');
-
-        envelope.addEventListener('click', function() {
-            envelope.classList.add('flipped');
-            setTimeout(function() {
-                envelope.classList.add('opened');
-                invitation.classList.remove('hidden');
-            }, 1000);
-        });
-
-        invitation.addEventListener('click', function() {
-            invitation.classList.add('flipped');
-            setTimeout(function() {
-                details.classList.remove('hidden');
-            }, 1000);
-        });
-    });
-</script>
+<script src="script.js"></script>
 
 </body>
 </html>
