--- a/index.html
+++ b/index.html
@@ -3,34 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Animated Invitation</title>
+    <title>Envelope Hover Effect</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-<div class="landing-page">
-    <div class="envelope" id="envelope"></div>
-</div>
-
-<div class="invitation hidden" id="invitation">
-    <div class="invitation-content">
-        <h2>Welcome to Our Special Event!</h2>
-        <p>You are cordially invited to join us for an evening of celebration and joy.</p>
-        <p>Date: [Date]</p>
-        <p>Time: [Time]</p>
-        <p>Location: [Location]</p>
-        <a href="#" id="details-link">Click here for more details</a>
+    <div class="envelope">
+        <div class="flap"></div>
+        <div class="letter"></div>
     </div>
-</div>
-
-<div class="details hidden" id="details">
-    <div class="details-content">
-        <h2>Event Details</h2>
-        <p>This is where the details of the event will be displayed.</p>
-    </div>
-</div>
-
-<script src="script.js"></script>
-
 </body>
 </html>
