--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="envelope">
-        <div class="flap"></div>
-        <div class="letter"></div>
+    <div class="container">
+        <div class="envelope">
+            <div class="flap"></div>
+            <div class="letter"></div>
+        </div>
     </div>
 </body>
 </html>
