--- a/index.html
+++ b/index.html
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Envelope Hover Effect</title>
-    <link rel="stylesheet" href="styles.css">
-</head>
 <body>
-    <div class="container">
-        <div class="envelope">
-            <div class="flap"></div>
-            <div class="letter"></div>
-        </div>
+    <div class="wrapper">
+      <div class="lid one"></div>
+      <div class="lid two"></div>
+      <div class="envelope"></div>
+      <div class="letter">
+        <p>Hello</p>
+      </div>
     </div>
-</body>
-</html>
+  </body>
