--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Envelope Animation</title>
+    <link rel="stylesheet" href="style.css">
+</head>
 <body>
     <div class="wrapper">
       <div class="lid one"></div>
       <div class="lid two"></div>
       <div class="envelope"></div>
       <div class="letter">
-        <p>Hello</p>
+        <p>You're Invited!</p>
       </div>
     </div>
   </body>
