--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
-<head>
+<!DOCTYPE html>
+<html lang="en">
+</head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lobster&display=swap">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Envelope Animation</title>
-    <link rel="stylesheet" href="style.css">
-</head>
+    <title>Invitation</title>
+    <link rel="stylesheet" href="styles.css">
+<head>
 <body>
-    <div class="wrapper">
-      <div class="lid one"></div>
-      <div class="lid two"></div>
-      <div class="envelope"></div>
-      <div class="letter">
-        <p>You're Invited!</p>
-      </div>
+ <div class="wrapper">
+   <div class="lid one"></div>
+    <div class="lid two"></div>
+    <div class="envelope">
+        <div class="wax-seal"></div>
     </div>
-  </body>
+    <div class="letter" id="detailsLetter">
+        <p>You're Invited</p>
+    </div>
+  </div>
+<div id="detailsContainer"></div>
+<img src="rectangle-image.png" class="horizontal-rectangle" alt="Rectangle Image">
+</div>
+  <script src="script.js"></script>
+</body>
+</html>
