--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </div>
   </div>
 <div id="detailsContainer"></div>
-<img src="rectangle-image.png" class="horizontal-rectangle" alt="Rectangle Image">
+<img src="Invitation.png" class="horizontal-rectangle" alt="Rectangle Image">
 </div>
   <script src="script.js"></script>
 </body>
