--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </div>
     </div>
     <div id="detailsContainer"></div>
+    <div class="horizontal-rectangle"></div>
     <script src="script.js"></script>
 </body>
 </html>
