--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
     </div>
     <div id="detailsContainer"></div>
-    <div class="horizontal-rectangle"></div>
+    <img src="Invitation.png" class="horizontal-rectangle" alt="Rectangle Image">
     <script src="script.js"></script>
 </body>
 </html>
